force-app/main/default/objects/Dedupe_Loan_Detail__c/Dedupe_Loan_Detail__c.object-meta.xml
<CustomObject>
    <label>Dedupe Loan Detail</label>
    <nameField>
        <displayFormat>DLD-{0000}</displayFormat>
        <label>Dedupe Loan Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dedupe Loan Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>