force-app/main/default/objects/Dedupe_Loan_Detail__c/fields/Application_Number__c.field-meta.xml
<CustomField>
    <fullName>Application_Number__c</fullName>
    <label>Application Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>