force-app/main/default/objects/Dedupe_Loan_Detail__c/fields/Application_Status__c.field-meta.xml
<CustomField>
    <fullName>Application_Status__c</fullName>
    <label>Application Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>