force-app/main/default/objects/Dedupe_Loan_Detail__c/fields/Dedupe_Detail__c.field-meta.xml
<CustomField>
    <fullName>Dedupe_Detail__c</fullName>
    <label>Dedupe Detail</label>
    <referenceTo>Dedupe_Detail__c</referenceTo>
    <relationshipLabel>Dedupe Loan Details</relationshipLabel>
    <relationshipName>Dedupe_Loan_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>