force-app/main/default/objects/Dedupe_Loan_Detail__c/fields/Lan__c.field-meta.xml
<CustomField>
    <fullName>Lan__c</fullName>
    <label>Lan</label>
    <length>50</length>
    <type>Text</type>
</CustomField>