force-app/main/default/objects/Dedupe_Loan_Detail__c/fields/Lan_Status__c.field-meta.xml
<CustomField>
    <fullName>Lan_Status__c</fullName>
    <label>Lan Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>